# polyrev

./: AGENTIC_SPEC.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
examples/config/: polyrev.yaml
examples/prompts/: api-contract.md  auth-security.md  database-schema.md  error-handling.md  ios-memory.md  python-security.md  reduce.md  swift-concurrency.md  test-coverage.md  timezone.md
prompts/: plan-reduce.md  reduce.md  scaffold.md
prompts/plan/: api.md  architecture.md  generalist.md  incremental.md  revise.md  security.md  select.md  skeptic.md  testing.md
src/: error.rs  lib.rs  main.rs  state.rs
src/cli/: enqueue.rs  init.rs  issue.rs  mod.rs  plan.rs  postprocess.rs  run.rs  schema.rs  tui.rs
src/config/: defaults.rs  mod.rs  types.rs
src/discovery/: diff.rs  files.rs  mod.rs  scope.rs
src/github/: dedupe.rs  issue.rs  mod.rs
src/output/: mod.rs  report.rs  summary.rs
src/parser/: finding.rs  json.rs  markdown.rs  mod.rs
src/planner/: mod.rs  orchestrator.rs  parser.rs  reducer.rs  types.rs
src/postprocess/: mod.rs
src/provider/: claude.rs  codex.rs  mod.rs
src/runner/: executor.rs  mod.rs  orchestrator.rs  retry.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/views/: findings.rs  mod.rs  plan.rs
