[package]
name = "polyrev"
version = "0.4.0"
edition = "2021"
description = "Parallel code review orchestrator for Claude Code and Codex CLI"
license = "MIT"
keywords = ["code-review", "claude", "codex", "automation", "security"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "polyrev"
path = "src/main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
sha2 = "0.10"
globset = "0.4"
ignore = "0.4"
regex = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"
time = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[features]
default = []
